bluec-tests/tests/valid/types_longlong/multi/longlong_args_client.c
int test_sum(int a, int b, int c, long long d, int e, long long f, int g, int h, long long i);

int main(void) {
    return test_sum(0, 0, 0, 34359738368LL, 0, 34359738368LL, 0, 0, 34359738368LL);
}