bluec-tests/tests/invalid/types_longdouble/invalid_type_specifier.c
int main(void) {
    /* "Unsigned long double" is not a valid type specifier */
    unsigned long double f = 10.0L;
    return 0;
}